--- a/form-request.html
+++ b/form-request.html
@@ -37,17 +37,18 @@ h2 {
   letter-spacing: 1px;
 }
 
-/* INFO NAVIGASI DENGAN EFEK VISUAL */
+/* INFO NAVIGASI DENGAN DESAIN BARU MINIMALIS */
 #info-text {
   font-size: 14px;
-  color: #fff;
+  color: #333;
   text-align: center;
   margin-bottom: 20px;
   line-height: 1.5;
-  padding: 10px 15px;
+  padding: 12px 15px;
   border-radius: 12px;
-  background: linear-gradient(90deg, #11998e, #38ef7d);
-  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+  background-color: #f0f4ff; /* soft pastel biru */
+  border: 1px solid #c5d0ff; /* tipis dan harmonis */
+  box-shadow: 0 2px 8px rgba(0,0,0,0.1); /* shadow lembut */
   font-weight: 600;
 }
 
@@ -133,7 +134,7 @@ button[type="submit"]:hover {
 <div class="container">
   <h2 id="header-text">REQUEST LIBUR / CUTI JADWAL BULAN DEPAN</h2>
 
-  <!-- INFO NAVIGASI DENGAN EFEK VISUAL -->
+  <!-- INFO NAVIGASI DENGAN DESAIN BARU MINIMALIS -->
   <div id="info-text">
     Silakan Request Jadwal sesuai keperluan saja.<br>
     Inputan bisa direvisi / diganti berulang kali. Gunakan dengan bijak! 🚀
