--- a/form-request.html
+++ b/form-request.html
@@ -37,7 +37,7 @@ h2 {
   letter-spacing: 1px;
 }
 
-/* INFO NAVIGASI DENGAN DESAIN BARU MINIMALIS */
+/* INFO */
 #info-text {
   font-size: 14px;
   color: #333;
@@ -46,13 +46,13 @@ h2 {
   line-height: 1.5;
   padding: 12px 15px;
   border-radius: 12px;
-  background-color: #f0f4ff; /* soft pastel biru */
+  background-color: #f0f4ff;
   border: 1px solid #c5d0ff;
   box-shadow: 0 2px 8px rgba(0,0,0,0.1);
   font-weight: 600;
 }
 
-/* FORM STYLING */
+/* FORM */
 label {
   display: block;
   margin-bottom: 6px;
@@ -111,18 +111,24 @@ button[type="submit"]:hover {
 .success { color: #155724; background: #d4edda; border: 1px solid #c3e6cb; }
 .error   { color: #721c24; background: #f8d7da; border: 1px solid #f5c6cb; }
 
-/* FOOTER STYLING DENGAN JARAK LEBIH */
+/* FOOTER */
 #footer {
   font-size: 13px;
   color: #666;
   text-align: center;
-  margin-top: 50px; /* dinaikkan jaraknya */
+  margin-top: 50px;
   line-height: 1.5;
+}
+#footer-note {
+  font-size: 13px;
+  color: #444;
+  margin-bottom: 10px;
+  font-weight: 600;
 }
 #countdown {
   font-weight: 600;
   color: #333;
-  margin-top: 15px; /* tambahan jarak di atas countdown */
+  margin-top: 10px;
 }
 
 @keyframes fadeIn {
@@ -136,7 +142,7 @@ button[type="submit"]:hover {
 <div class="container">
   <h2 id="header-text">REQUEST LIBUR / CUTI JADWAL BULAN DEPAN</h2>
 
-  <!-- INFO NAVIGASI -->
+  <!-- INFO -->
   <div id="info-text">
     Silakan Request Jadwal sesuai keperluan saja.<br>
     Inputan bisa direvisi / diganti berulang kali. Gunakan dengan bijak!
@@ -173,8 +179,9 @@ button[type="submit"]:hover {
     <button type="submit" id="submitBtn">KIRIM REQUEST</button>
     <div id="status"></div>
 
-    <!-- FOOTER HANYA COUNTDOWN -->
+    <!-- FOOTER -->
     <div id="footer">
+      <div id="footer-note"></div>
       <div id="countdown"></div>
     </div>
   </form>
@@ -182,7 +189,6 @@ button[type="submit"]:hover {
 
 <script src="https://cdn.jsdelivr.net/npm/air-datepicker@3.5.0/air-datepicker.min.js"></script>
 <script>
-// === SCRIPT SAMA SEPERTI SEBELUMNYA ===
 const scriptURL = "https://script.google.com/macros/s/AKfycbw4-_3Lr3ObhEXeW7JCyDOkKAS0R-3L30wXhj4Y-Eumra1RNICzjmeFLtBJzyToGtYlHQ/exec";
 const quotaURL = scriptURL;
 const MAX_KUOTA_HARIAN = 21;
@@ -192,9 +198,16 @@ const monthNames = ["Januari","Februari","Maret","April","Mei","Juni","Juli","Ag
   const today = new Date();
   const nextMonth = new Date(today.getFullYear(), today.getMonth() + 1, 1);
   const nextMonthName = monthNames[nextMonth.getMonth()];
-  const headerText = `REQUEST LIBUR / CUTI BULAN ${nextMonthName.toUpperCase()}`;
+  const upperMonth = nextMonthName.toUpperCase();
+
+  const headerText = `REQUEST LIBUR / CUTI BULAN ${upperMonth}`;
   document.getElementById('header-text').textContent = headerText;
   document.getElementById('page-title').textContent = headerText;
+
+  // footer text dinamis
+  document.getElementById('footer-note').innerHTML =
+    `Kuota libur bulan <b>${upperMonth}</b> 8 jika lembur, tidak lembur 9.<br>
+     Untuk hari yg sudah full request maka tidak bisa direquest.`;
 })();
 
 const params = new URLSearchParams(window.location.search);
@@ -279,7 +292,7 @@ function startCountdown() {
       countdownEl.textContent = `Sisa waktu request: ${days}Hari ${hours}Jam ${mins}Menit ${secs}Detik`;
       form.querySelectorAll("input, select, button").forEach(el => el.disabled = false);
     } else {
-      countdownEl.textContent = "⏰ Waktu request sudah berakhir. Open kembali tanggal 1-16 Setiap Bulan.";
+      countdownEl.textContent = "⏰ Waktu request sudah berakhir. Open kembali tanggal 1–16 setiap bulan.";
       form.querySelectorAll("input, select, button").forEach(el => el.disabled = true);
     }
   }
@@ -321,8 +334,3 @@ document.getElementById("requestForm").addEventListener("submit", function(e){
 </script>
 </body>
 </html>
-
-
-
-
-
