--- a/form-request.html
+++ b/form-request.html
@@ -6,24 +6,23 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/air-datepicker@3.5.0/air-datepicker.min.css">
 
 <style>
-/* ... CSS Anda tetap ... */
-body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin:0; min-height:100vh; display:flex; justify-content:center; align-items:center; background:linear-gradient(135deg,#74ebd5,#ACB6E5); padding:20px; }
-.container { background:#fff; padding:35px 30px 50px; border-radius:20px; box-shadow:0 12px 35px rgba(0,0,0,0.15); width:480px; max-width:100%; animation:fadeIn .6s ease-in-out; position:relative; }
-h2 { text-align:center; margin-bottom:10px; font-size:24px; font-weight:700; background:linear-gradient(90deg,#4e54c8,#8f94fb); -webkit-background-clip:text; -webkit-text-fill-color:transparent; letter-spacing:1px; }
-#info-text { font-size:14px; color:#333; text-align:center; margin-bottom:20px; line-height:1.5; padding:12px 15px; border-radius:12px; background-color:#f0f4ff; border:1px solid #c5d0ff; box-shadow:0 2px 8px rgba(0,0,0,0.1); font-weight:600; }
-label { display:block; margin-bottom:6px; font-size:14px; font-weight:600; color:#444; }
-input, select { width:100%; padding:12px 14px; border:1px solid #ddd; border-radius:10px; font-size:14px; margin-bottom:16px; box-sizing:border-box; transition:.3s; background-color:#fdfdfd; }
-input:focus, select:focus { border-color:#4e54c8; box-shadow:0 0 8px rgba(78,84,200,.3); background-color:#fff; outline:none; }
-input[readonly]{ background:#f3f3f3; color:#555; }
-button[type="submit"]{ width:100%; padding:14px; margin-top:5px; font-size:15px; font-weight:600; border:none; border-radius:12px; cursor:pointer; transition:.3s; background:linear-gradient(90deg,#11998e,#38ef7d); color:#fff; box-shadow:0 6px 15px rgba(17,153,142,.35); }
-button[type="submit"]:hover{ transform:translateY(-2px); box-shadow:0 10px 20px rgba(17,153,142,.45); }
-#status{ margin-top:18px; text-align:center; font-size:14px; font-weight:500; min-height:28px; padding:6px; border-radius:8px; }
-.success{ color:#155724; background:#d4edda; border:1px solid #c3e6cb; }
-.error{ color:#721c24; background:#f8d7da; border:1px solid #f5c6cb; }
-#footer{ font-size:13px; color:#666; text-align:center; margin-top:50px; line-height:1.5; }
-#footer-note{ font-size:13px; color:#444; margin-bottom:10px; font-weight:600; }
-#countdown{ font-weight:600; color:#333; margin-top:10px; }
-@keyframes fadeIn { from{opacity:0; transform:translateY(-15px);} to{opacity:1; transform:translateY(0);} }
+body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 0; min-height: 100vh; display: flex; justify-content: center; align-items: center; background: linear-gradient(135deg, #74ebd5, #ACB6E5); padding: 20px; }
+.container { background: #fff; padding: 35px 30px 50px; border-radius: 20px; box-shadow: 0 12px 35px rgba(0,0,0,0.15); width: 480px; max-width: 100%; animation: fadeIn 0.6s ease-in-out; position: relative; }
+h2 { text-align: center; margin-bottom: 10px; font-size: 24px; font-weight: 700; background: linear-gradient(90deg, #4e54c8, #8f94fb); -webkit-background-clip: text; -webkit-text-fill-color: transparent; letter-spacing: 1px; }
+#info-text { font-size: 14px; color: #333; text-align: center; margin-bottom: 20px; line-height: 1.5; padding: 12px 15px; border-radius: 12px; background-color: #f0f4ff; border: 1px solid #c5d0ff; box-shadow: 0 2px 8px rgba(0,0,0,0.1); font-weight: 600; }
+label { display: block; margin-bottom: 6px; font-size: 14px; font-weight: 600; color: #444; }
+input, select { width: 100%; padding: 12px 14px; border: 1px solid #ddd; border-radius: 10px; font-size: 14px; margin-bottom: 16px; box-sizing: border-box; transition: all 0.3s ease; background-color: #fdfdfd; }
+input:focus, select:focus { border-color: #4e54c8; box-shadow: 0 0 8px rgba(78,84,200,0.3); background-color: #fff; outline: none; }
+input[readonly] { background-color: #f3f3f3; color: #555; }
+button[type="submit"] { width: 100%; padding: 14px; margin-top: 5px; font-size: 15px; font-weight: 600; border: none; border-radius: 12px; cursor: pointer; transition: all 0.3s ease; background: linear-gradient(90deg, #11998e, #38ef7d); color: #fff; box-shadow: 0 6px 15px rgba(17,153,142,0.35); }
+button[type="submit"]:hover { transform: translateY(-2px); box-shadow: 0 10px 20px rgba(17,153,142,0.45); }
+#status { margin-top: 18px; text-align: center; font-size: 14px; font-weight: 500; min-height: 28px; padding: 6px; border-radius: 8px; }
+.success { color: #155724; background: #d4edda; border: 1px solid #c3e6cb; }
+.error   { color: #721c24; background: #f8d7da; border: 1px solid #f5c6cb; }
+#footer { font-size: 13px; color: #666; text-align: center; margin-top: 50px; line-height: 1.5; }
+#footer-note { font-size: 13px; color: #444; margin-bottom: 10px; font-weight: 600; }
+#countdown { font-weight: 600; color: #333; margin-top: 10px; }
+@keyframes fadeIn { from { opacity: 0; transform: translateY(-15px); } to { opacity: 1; transform: translateY(0); } }
 </style>
 </head>
 <body>
@@ -78,11 +77,11 @@ button[type="submit"]:hover{ transform:translateY(-2px); box-shadow:0 10px 20px 
 <script>
 const scriptURL = "https://script.google.com/macros/s/AKfycbw4-_3Lr3ObhEXeW7JCyDOkKAS0R-3L30wXhj4Y-Eumra1RNICzjmeFLtBJzyToGtYlHQ/exec";
 const quotaURL = scriptURL;
-const MAX_KUOTA_HARIAN = 21;
+const MAX_KUOTA_HARIAN = 21; // (UI saja; server = 18)
 const monthNames = ["Januari","Februari","Maret","April","Mei","Juni","Juli","Agustus","September","Oktober","November","Desember"];
 
-// USER-LIMIT: batas user untuk libur
-const MAX_LIBUR_USER = 8; // 👈 batas pilihan tanggal LIBUR per user
+// Batas user untuk REQUEST LIBUR
+const MAX_LIBUR_USER = 8;
 
 (function updateHeader() {
   const today = new Date();
@@ -115,13 +114,36 @@ async function fetchFullDays() {
   }
 }
 
-// util kecil: hitung tanggal unik dari string "d-MM, d-MM"
-function countUniqueDates(str) { // USER-LIMIT
+// Hitung tanggal unik dari string "d-MM, d-MM"
+function countUniqueDates(str) {
   if (!str) return 0;
-  const set = new Set(
-    str.split(",").map(s => s.trim()).filter(Boolean)
-  );
-  return set.size;
+  return new Set(str.split(",").map(s => s.trim()).filter(Boolean)).size;
+}
+
+// Normalisasi string tanggal dari server (ISO -> "d-MM")
+function normalizeDateString(str) {
+  if (!str) return "";
+  // Jika sudah "d-MM, d-MM", biarkan
+  if (/^\d{1,2}-\d{1,2}(,\s*\d{1,2}-\d{1,2})*$/.test(str)) return str;
+
+  // Jika array: normalize tiap item
+  if (Array.isArray(str)) return str.map(normalizeDateString).join(", ");
+
+  // Jika ada koma: pecah & normalize per item
+  if (typeof str === "string" && str.includes(",")) {
+    return str.split(",").map(s => normalizeDateString(s.trim())).join(", ");
+  }
+
+  // Coba parse sebagai tanggal (ISO dll)
+  const d = new Date(str);
+  if (!isNaN(d)) {
+    const day = d.getDate();
+    const month = d.getMonth() + 1;
+    return `${day}-${String(month).padStart(2, "0")}`;
+  }
+
+  // Fallback: kembalikan apa adanya
+  return String(str);
 }
 
 function initDatepicker(selector, disabledDays) {
@@ -153,13 +175,12 @@ function initDatepicker(selector, disabledDays) {
     position: 'bottom left',
     readOnly: true,
 
-    // USER-LIMIT: batasi pilihan hanya pada input LIBUR
+    // Batasi pemilihan hanya untuk input LIBUR
     onSelect: ({ formattedDate }) => {
       if (selector !== '#libur') return;
       const input = document.getElementById('libur');
       const parts = (formattedDate || '').split(',').map(s => s.trim()).filter(Boolean);
       if (parts.length > MAX_LIBUR_USER) {
-        // potong ke 8 pertama
         input.value = parts.slice(0, MAX_LIBUR_USER).join(', ');
         const status = document.getElementById('status');
         status.textContent = `⚠️ Maksimal memilih ${MAX_LIBUR_USER} tanggal libur.`;
@@ -169,14 +190,13 @@ function initDatepicker(selector, disabledDays) {
     }
   });
 
-  // simpan instance jika butuh (opsional)
   document.querySelector(selector)._adp = dp;
 }
 
 async function initializeApp() {
   const fullDaysList = await fetchFullDays();
-  initDatepicker('#libur', fullDaysList); // libur ter-lock tanggal penuh
-  initDatepicker('#cuti', fullDaysList);  // cuti tetap seperti semula (pakai fullDays dari GAS)
+  initDatepicker('#libur', fullDaysList); // libur: disable tanggal penuh
+  initDatepicker('#cuti', fullDaysList);  // cuti tetap gunakan tanggal penuh dari GAS
 }
 initializeApp();
 
@@ -218,24 +238,21 @@ function startCountdown() {
 }
 startCountdown();
 
-/* ===== Prefill helper (tetap) ===== */
+/* ===== Prefill helper ===== */
 function setFormValuesFromServer(data) {
-  // USER-LIMIT: jika prefill libur > 8, potong & beri pesan
-  if (data.libur) {
-    const parts = data.libur.split(',').map(s => s.trim()).filter(Boolean);
-    if (parts.length > MAX_LIBUR_USER) {
-      document.getElementById("libur").value = parts.slice(0, MAX_LIBUR_USER).join(', ');
-      const status = document.getElementById('status');
-      status.textContent = `⚠️ Data libur melebihi ${MAX_LIBUR_USER}, ditampilkan ${MAX_LIBUR_USER} pertama.`;
-      status.className = 'error';
-    } else {
-      document.getElementById("libur").value = data.libur || "";
-    }
+  // Normalisasi dari server (ISO -> d-MM), lalu terapkan limit tampil 8 utk LIBUR
+  const liburNorm = normalizeDateString(data.libur || "");
+  const parts = liburNorm ? liburNorm.split(",").map(s=>s.trim()).filter(Boolean) : [];
+  if (parts.length > MAX_LIBUR_USER) {
+    document.getElementById("libur").value = parts.slice(0, MAX_LIBUR_USER).join(", ");
+    const status = document.getElementById('status');
+    status.textContent = `⚠️ Data libur melebihi ${MAX_LIBUR_USER}, ditampilkan ${MAX_LIBUR_USER} pertama.`;
+    status.className = "error";
   } else {
-    document.getElementById("libur").value = "";
+    document.getElementById("libur").value = liburNorm;
   }
 
-  document.getElementById("cuti").value = data.cuti || "";
+  document.getElementById("cuti").value = normalizeDateString(data.cuti || "");
   document.getElementById("requestLainnya").value = data.requestLainnya || "";
   if (data.ekstrakulikuler) {
     const eks = document.getElementById("ekstrakulikuler");
@@ -268,7 +285,7 @@ document.getElementById("requestForm").addEventListener("submit", async function
   status.textContent = "⏳ Mengirim data...";
   status.className = "";
 
-  // === Urutkan tanggal sebelum dikirim ===
+  // Urutkan tanggal sebelum dikirim
   function sortDates(dateString) {
     if (!dateString) return "";
     const arr = dateString.split(",").map(d => d.trim()).filter(Boolean);
@@ -285,16 +302,16 @@ document.getElementById("requestForm").addEventListener("submit", async function
   liburInput.value = sortDates(liburInput.value);
   cutiInput.value = sortDates(cutiInput.value);
 
-  // USER-LIMIT: validasi jumlah tanggal libur max 8 sebelum submit
+  // Validasi jumlah tanggal LIBUR max 8 (UI)
   const liburCount = countUniqueDates(liburInput.value);
   if (liburCount > MAX_LIBUR_USER) {
     status.textContent = `❌ Maksimal memilih ${MAX_LIBUR_USER} tanggal libur. Anda memilih ${liburCount}.`;
     status.className = "error";
-    return; // batalkan submit
+    return;
   }
 
   const formData = new FormData(this);
-  formData.append("return","json"); // agar dapat payload untuk prefill langsung
+  formData.append("return","json"); // agar dapat payload JSON utk prefill langsung
 
   try {
     const res = await fetch(scriptURL, { method: "POST", body: formData });
