--- a/form-request.html
+++ b/form-request.html
@@ -20,6 +20,15 @@ button[type="submit"]:hover { transform: translateY(-2px); box-shadow: 0 10px 20
 .success { color: #155724; background: #d4edda; border: 1px solid #c3e6cb; }
 .error   { color: #721c24; background: #f8d7da; border: 1px solid #f5c6cb; }
 #footer { font-size: 13px; color: #666; text-align: center; margin-top: 50px; line-height: 1.5; }
+#copyright {
+  text-align: center;
+  font-size: 12px;
+  color: #333;
+  opacity: 0.7;
+  margin-top: 25px;
+  font-weight: 600;
+}
+
 #footer-note { font-size: 13px; color: #444; margin-bottom: 10px; font-weight: 600; }
 #countdown { font-weight: 600; color: #333; margin-top: 10px; }
 @keyframes fadeIn { from { opacity: 0; transform: translateY(-15px); } to { opacity: 1; transform: translateY(0); } }
@@ -354,5 +363,17 @@ document.getElementById("requestForm").addEventListener("submit", async function
   }
 });
 </script>
+      </div>
+  </form>
+</div>
+
+<footer id="copyright">© 2025 EDP Fai</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/air-datepicker@3.5.0/air-datepicker.min.js"></script>
+<script>
+  /* ... script JavaScript Anda ... */
+</script>
 </body>
 </html>
+
+
