--- a/form-request.html
+++ b/form-request.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/air-datepicker@3.5.0/air-datepicker.min.css">
 
 <style>
-body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 0; min-height: 100vh; display: flex; justify-content: center; align-items: center; background: linear-gradient(135deg, #74ebd5, #ACB6E5); padding: 20px; }
+body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 0; min-height: 100vh; display: flex; justify-content: flex-direction: column;center; align-items: center; background: linear-gradient(135deg, #74ebd5, #ACB6E5); padding: 20px; }
 .container { background: #fff; padding: 35px 30px 50px; border-radius: 20px; box-shadow: 0 12px 35px rgba(0,0,0,0.15); width: 480px; max-width: 100%; animation: fadeIn 0.6s ease-in-out; position: relative; }
 h2 { text-align: center; margin-bottom: 10px; font-size: 24px; font-weight: 700; background: linear-gradient(90deg, #4e54c8, #8f94fb); -webkit-background-clip: text; -webkit-text-fill-color: transparent; letter-spacing: 1px; }
 #info-text { font-size: 14px; color: #333; text-align: center; margin-bottom: 20px; line-height: 1.5; padding: 12px 15px; border-radius: 12px; background-color: #f0f4ff; border: 1px solid #c5d0ff; box-shadow: 0 2px 8px rgba(0,0,0,0.1); font-weight: 600; }
@@ -362,18 +362,16 @@ document.getElementById("requestForm").addEventListener("submit", async function
     status.className = "error";
   }
 });
-</script>
-      </div>
-  </form>
-</div>
+</div> <!-- /.container -->
 
 <footer id="copyright">© 2025 EDP Fai</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/air-datepicker@3.5.0/air-datepicker.min.js"></script>
 <script>
-  /* ... script JavaScript Anda ... */
+  /* Seluruh JS Anda (satu-satunya), tidak ada duplikat di tempat lain */
 </script>
 </body>
 </html>
+
 
 
